# LatentGraphDiffusion

./: .gitignore  check_embedding.ipynb  main.py  pretrain.py  pyproject.toml
cfg/: cora-node-encoder.yaml  evo-encoder.sh  evo-encoder.yaml  evo-unconditional-encoder.yaml  zinc-encoder.yaml
lgd/: __init__.py
lgd/asset/: logger.py
lgd/config/: wandb_config.py
lgd/loader/: master_loader.py
lgd/loader/dataset/: evolution_dataset.py  voc_superpixels.py
lgd/train/: generic_generation.py
lgd/transform/: transforms.py
