[project]
name = "latentgraphdiffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "dill>=0.4.0",
    "fcd-torch>=1.0.7",
    "fsspec>=2024.6.1",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.9.4",
    "ogb>=1.3.6",
    "opt-einsum>=3.4.0",
    "performer-pytorch>=1.1.4",
    "pyemd>=1.0.0",
    "pyg-lib>=0.4.0",
    "rdkit>=2025.3.3",
    "seaborn>=0.13.2",
    "tensorboardx>=2.6.4",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torchaudio>=2.7.1",
    "torchmetrics>=1.7.2",
    "torchvision>=0.22.1",
    "wandb>=0.20.1",
    "yacs>=0.1.8",
]
[tool.uv]
python-preference = "managed"

[tool.uv.sources]
pyg-lib = { url = "https://data.pyg.org/whl/torch-2.7.0%2Bcu128/pyg_lib-0.4.0%2Bpt27cu128-cp39-cp39-linux_x86_64.whl" }
